force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Case__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>