force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Chat_Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Chat_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat Active</label>
    <type>Checkbox</type>
</CustomField>