force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Chat_Conversation__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Chat_Conversation__c</fullName>
    <label>Chat Conversation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>