force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Chat_Duration__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Chat_Duration__c</fullName>
    <label>Chat Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>