force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Chat_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Chat_End_Time__c</fullName>
    <label>Chat End Time</label>
    <type>DateTime</type>
</CustomField>