force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Contact__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>