force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Object_Id__c</fullName>
    <label>Related Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>