force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__Related_ObjectId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_ObjectId__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; tdc_tsw__Related_Object_Id__c , tdc_tsw__Related_Object__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>