force-app/main/default/objects/tdc_tsw__ChatTranscript__c/fields/tdc_tsw__To_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__To_Number__c</fullName>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>